--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ numpy = "^1.26.1"
 absl-py = "^2.0.0"
 scipy = "^1.11.3"
 pillow = "^10.1.0"
-jinja2 = "^3.1.2"
+jinja2 = "3.1.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
