--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 description = ""
 authors = ["None"]
 readme = "README.md"
+packages = [
+    { include = "cdmetadl" },
+]
 
 [tool.poetry.dependencies]
 python = ">=3.11,<3.12"
