--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ matplotlib = "^3.8.1"
 scikit-learn = "^1.3.2"
 numpy = "^1.26.1"
 absl-py = "^2.0.0"
-scipy = "^1.11.3"
+scipy = "1.10"
 pillow = "^10.1.0"
 jinja2 = "3.1.0"
 
