--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ jinja2 = "3.1.0"
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 requests = "^2.31.0"
+yapf = "^0.40.2"
+
+[tool.yapf]
+COLUMN_LIMIT = 120
 
 [build-system]
 requires = ["poetry-core"]
