--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,6 @@ seaborn = "^0.13.0"
 matplotlib = "^3.8.1"
 scikit-learn = "^1.3.2"
 numpy = "^1.26.1"
-absl-py = "^2.0.0"
 scipy = "1.10"
 pillow = "^10.1.0"
 jinja2 = "3.1.0"
@@ -27,6 +26,10 @@ jinja2 = "3.1.0"
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
 requests = "^2.31.0"
+yapf = "^0.40.2"
+
+[tool.yapf]
+COLUMN_LIMIT = 120
 
 [build-system]
 requires = ["poetry-core"]
