--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,17 @@ jinja2 = "3.1.0"
 jupyter = "^1.0.0"
 requests = "^2.31.0"
 yapf = "^0.40.2"
+pytest = "^7.4.3"
 
 [tool.yapf]
 COLUMN_LIMIT = 120
+SPLIT_COMPLEX_COMPREHENSION = true
+DEDENT_CLOSING_BRACKETS = true
+COALESCE_BRACKETS = true
+
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
 
 [build-system]
 requires = ["poetry-core"]
