--- a/baselines/finetuning/config.json
+++ b/baselines/finetuning/config.json
@@ -1,7 +1,8 @@
 {
     "train_data_format": "batch",
-    "batch_size": 16,
-    "validation_datasets": 3,
+    "train_config": {
+        "batch_size": 16
+    },
     "valid_config": {
         "N": 5,
         "min_N": null,
