--- a/baselines/metadelta/config.json
+++ b/baselines/metadelta/config.json
@@ -1,7 +1,8 @@
 {
     "train_data_format": "batch",
-    "batch_size": 64,
-    "validation_datasets": 3,
+    "train_config": {
+        "batch_size": 64,
+    },
     "valid_config": {
         "N": 5,
         "min_N": null,
