--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ numpy = "^1.26.1"
 scipy = "1.10"
 pillow = "^10.1.0"
 jinja2 = "3.1.0"
+more-itertools = "^10.1.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
