--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ SPLIT_COMPLEX_COMPREHENSION = true
 DEDENT_CLOSING_BRACKETS = true
 COALESCE_BRACKETS = true
 SPLIT_BEFORE_NAMED_ASSIGNS = false
+ALLOW_SPLIT_BEFORE_DICT_VALUE = false
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
