added base class for augmentation, classes for types of augmentation

--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,72 @@
 /training_output/maml/cross-domain/PLT_VIL-BCT/tensorboard/valid/events.out.tfevents.1703017000.workstation.83422.1 filter=lfs diff=lfs merge=lfs -text
 /training_output/maml/cross-domain/dataset/datasets/train_dataset.pkl filter=lfs diff=lfs merge=lfs -text
 /training_output/maml/cross-domain/dataset/tensorboard/valid/events.out.tfevents.1703319119.workstation.9055.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/cross-domain/datasets/train_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/cross-domain/datasets/val_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/cross-domain/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/cross-domain/tensorboard/valid/events.out.tfevents.1704736400.lab05.622497.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/domain-independent/datasets/train_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/domain-independent/datasets/val_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/domain-independent/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/domain-independent/tensorboard/valid/events.out.tfevents.1704734392.lab05.617968.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/ACT_410/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/ACT_410/tensorboard/valid/events.out.tfevents.1704741540.lab05.627019.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/AWA/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/AWA/tensorboard/valid/events.out.tfevents.1704739572.lab05.625264.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/BTS/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/BTS/tensorboard/valid/events.out.tfevents.1704740880.lab05.625860.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/FNG/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/FNG/tensorboard/valid/events.out.tfevents.1704740214.lab05.625529.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/cross-domain/datasets/train_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/cross-domain/datasets/val_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/cross-domain/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/cross-domain/model/weights.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/cross-domain/tensorboard/valid/events.out.tfevents.1704745709.lab05.639217.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/domain-independent/datasets/train_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/domain-independent/datasets/val_dataset.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/domain-independent/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/domain-independent/model/weights.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/domain-independent/tensorboard/valid/events.out.tfevents.1704742801.lab05.633428.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/ACT_410/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/ACT_410/model/weights.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/ACT_410/tensorboard/valid/events.out.tfevents.1704753892.lab05.643393.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/AWA/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/AWA/model/weights.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/AWA/tensorboard/valid/events.out.tfevents.1704748633.lab05.640189.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/BTS/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/BTS/model/weights.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/BTS/tensorboard/valid/events.out.tfevents.1704751900.lab05.642739.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/FNG/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/FNG/model/weights.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/FNG/tensorboard/valid/events.out.tfevents.1704750199.lab05.642086.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/cross-domain/tensorboard/valid/events.out.tfevents.1704871593.lab05.704595.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/domain-independent/tensorboard/valid/events.out.tfevents.1704870171.lab05.704059.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/ACT_410/tensorboard/valid/events.out.tfevents.1704874984.lab05.705920.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/AWA/tensorboard/valid/events.out.tfevents.1704873219.lab05.705122.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/BTS/tensorboard/valid/events.out.tfevents.1704874413.lab05.705680.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/FNG/tensorboard/valid/events.out.tfevents.1704873806.lab05.705375.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/cross-domain/tensorboard/valid/events.out.tfevents.1704840587.lab05.693366.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/domain-independent/tensorboard/valid/events.out.tfevents.1704838659.lab05.691880.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/ACT_410/tensorboard/valid/events.out.tfevents.1704847160.lab05.695751.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/AWA/tensorboard/valid/events.out.tfevents.1704842567.lab05.694068.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/BTS/tensorboard/valid/events.out.tfevents.1704845648.lab05.695163.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/FNG/tensorboard/valid/events.out.tfevents.1704844090.lab05.694546.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/finetuning/cross-domain/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/finetuning/domain-independent/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/finetuning/within-domain/ACT_410/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/finetuning/within-domain/AWA/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/finetuning/within-domain/BTS/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/finetuning/within-domain/FNG/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/finetuning/within-domain/PRT/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/maml/cross-domain/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/maml/domain-independent/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/maml/within-domain/ACT_410/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/maml/within-domain/AWA/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/maml/within-domain/BTS/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/maml/within-domain/FNG/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/eval/maml/within-domain/PRT/predictions.pkl filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/PRT/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/finetuning/within-domain/PRT/tensorboard/valid/events.out.tfevents.1705137518.lab05.874160.1 filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/PRT/model/model_state.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/PRT/model/weights.pickle filter=lfs diff=lfs merge=lfs -text
+/output/full/training/maml/within-domain/PRT/tensorboard/valid/events.out.tfevents.1705137445.lab05.873552.1 filter=lfs diff=lfs merge=lfs -text
