--- a/configs/train/baseline/baseline.yml
+++ b/configs/train/baseline/baseline.yml
@@ -21,14 +21,9 @@ dataset:
         k_shots: 
             range: [1, 20]
         query_size: 20
-    test: 
-        n_ways:
-            value: 5
-        k_shots: 
-            range: [1, 20]
-        query_size: 20
 model: 
-    number_of_batches: 10000
-    number_of_training_tasks: 10000
+    number_of_batches: 10_000
+    number_of_training_tasks: 10_000
     number_of_validation_tasks_per_dataset: 10
     validate_every: 100
+    dropout_probability: 0.00
