--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ python = ">=3.11,<3.12"
 torch = {version = "^2.1.1"}
 torchvision = {version = "^0.16"}
 pyyaml = "^6.0.1"
-pandas = "^2.1.2"
+pandas = {extras = ["pyarrow"], version = "^2.2.0"}
 seaborn = "^0.13.0"
 matplotlib = "^3.8.1"
 scikit-learn = "^1.3.2"
@@ -28,6 +28,17 @@ plotly = "^5.18.0"
 dash = "^2.14.2"
 dash-mantine-components = "^0.12.1"
 tensorboard = "^2.15.1"
+opencv-python = "^4.9.0.80"
+diffusers = "^0.25.0"
+xformers = "^0.0.23.post1"
+transformers = "^4.36.2"
+accelerate = "^0.26.1"
+addict = "^2.4.0"
+prettytable = "^3.9.0"
+timm = "^0.9.12"
+basicsr = "^1.4.2"
+einops = "^0.7.0"
+kaleido = "0.2.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
