--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 # Data
 *.zip
 public_data/
-training_output*
+output/tmp
 
 # logs 
 *logs*
@@ -21,5 +21,4 @@ training_output*
 
 .venv
 .keys
-tutorial.ipynb
 
