--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,11 @@ plotly = "^5.18.0"
 dash = "^2.14.2"
 dash-mantine-components = "^0.12.1"
 tensorboard = "^2.15.1"
+opencv-python = "^4.9.0.80"
+diffusers = "^0.25.0"
+xformers = "^0.0.23.post1"
+transformers = "^4.36.2"
+accelerate = "^0.26.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
