differen diffusion notebooks

--- a/.gitattributes
+++ b/.gitattributes
@@ -85,3 +85,7 @@
 /cdmetadl/controlnet/initial_augmentation_tests.ipynb filter=lfs diff=lfs merge=lfs -text
 /cdmetadl/notebooks/augmentation.ipynb filter=lfs diff=lfs merge=lfs -text
 /cdmetadl/notebooks/confidence_estimation.ipynb filter=lfs diff=lfs merge=lfs -text
+/cdmetadl/notebooks/diffusion_augmentation[[:space:]]BCT.ipynb filter=lfs diff=lfs merge=lfs -text
+/cdmetadl/notebooks/diffusion_augmentation[[:space:]]CRS.ipynb filter=lfs diff=lfs merge=lfs -text
+/cdmetadl/notebooks/diffusion_augmentation[[:space:]]DOG.ipynb filter=lfs diff=lfs merge=lfs -text
+/cdmetadl/notebooks/diffusion_augmentation_APL.ipynb filter=lfs diff=lfs merge=lfs -text
