--- a/configs/eval/baseline.yml
+++ b/configs/eval/baseline.yml
@@ -3,7 +3,7 @@ dataset:
         n_ways:
             value: 5
         k_shots: 
-            value: 15
+            range: [1, 20]
         query_size: 20
 
 evaluation:
