--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ timm = "^0.9.12"
 basicsr = "^1.4.2"
 einops = "^0.7.0"
 kaleido = "0.2.1"
+controlnet-aux = "0.0.7"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.0.0"
