--- a/configs/eval/standard_augmentation/standard_augment_all_k_5.yml
+++ b/configs/eval/standard_augmentation/standard_augment_all_k_5.yml
@@ -3,11 +3,11 @@ dataset:
         n_ways:
             value: 5
         k_shots: 
-            choice: [1, 5, 10, 15, 20]
+            value: 5
         query_size: 20
 
 evaluation:
-    tasks_per_dataset: 500
+    tasks_per_dataset: 100
     confidence_estimators:
         use: "ConstantConfidenceProvider"
         ConstantConfidenceProvider:
