--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ requests = "^2.31.0"
 yapf = "^0.40.2"
 pytest = "^7.4.3"
 snakeviz = "^2.2.0"
+pandas = "^2.2.0"
 
 [tool.yapf]
 COLUMN_LIMIT = 120
