--- a/configs/eval/standard_augmentation/pseudo_confidence/standard_augment_pc_k_5.yml
+++ b/configs/eval/standard_augmentation/pseudo_confidence/standard_augment_pc_k_5.yml
@@ -3,18 +3,14 @@ dataset:
         n_ways:
             value: 5
         k_shots: 
-            value: 20
+            value: 15 # 10 samples are used for pseudo confidence estimation
         query_size: 20
 
 evaluation:
-    tasks_per_dataset: 100
+    tasks_per_dataset: 200
     confidence_estimators:
-        use: "ConstantConfidenceProvider"
-        ConstantConfidenceProvider:
-            confidence: 0
+        use: "PseudoConfidenceEstimator"
         PseudoConfidenceEstimator: {}
-        MCDropoutConfidenceEstimator:
-            num_samples: 20
 
     augmentors:
         use: StandardAugmentation
@@ -22,6 +18,6 @@ evaluation:
             keep_original_data: True
             augmentation_size: 
                 scale: 1
-                offset: 5 
+                offset: 3
                 maximum: 20
                 threshold: 0.8
