--- a/configs/eval/generative_augmentation/mc_dropout/generative_augment_mc_k_10.yml
+++ b/configs/eval/generative_augmentation/mc_dropout/generative_augment_mc_k_10.yml
@@ -3,25 +3,23 @@ dataset:
         n_ways:
             value: 5
         k_shots: 
-            value: 15
+            value: 10
         query_size: 20
 
 evaluation:
-    tasks_per_dataset: 100
+    tasks_per_dataset: 200
     confidence_estimators:
         use: "MCDropoutConfidenceEstimator"
-        ConstantConfidenceProvider:
-            confidence: 0
-        PseudoConfidenceEstimator: {}
         MCDropoutConfidenceEstimator:
-            num_samples: 20
+            num_samples: 100
 
     augmentors:
-        use: StandardAugmentation
-        StandardAugmentation:
+        use: GenerativeAugmentation
+        GenerativeAugmentation:
             keep_original_data: True
             augmentation_size: 
                 scale: 1
-                offset: 5 
+                offset: 3 
                 maximum: 20
                 threshold: 0.8
+            annotator_type: "hed"
