--- a/configs/eval/pseudo_augmentation/baseline/pseudo_augment_all_k_5.yml
+++ b/configs/eval/pseudo_augmentation/baseline/pseudo_augment_all_k_5.yml
@@ -3,25 +3,22 @@ dataset:
         n_ways:
             value: 5
         k_shots: 
-            choice: [1, 5, 10, 15, 20]
-        query_size: 20
+            value: 15 # 10 samples are and pseudo augmentation
+        query_size: 10
 
 evaluation:
-    tasks_per_dataset: 500
+    tasks_per_dataset: 50
     confidence_estimators:
         use: "ConstantConfidenceProvider"
         ConstantConfidenceProvider:
             confidence: 0
-        PseudoConfidenceEstimator: {}
-        MCDropoutConfidenceEstimator:
-            num_samples: 20
 
     augmentors:
-        use: StandardAugmentation
-        StandardAugmentation:
+        use: PseudoAugmentation
+        PseudoAugmentation:
             keep_original_data: True
             augmentation_size: 
                 scale: 1
-                offset: 5 
+                offset: 3 
                 maximum: 20
                 threshold: 0.8
