--- a/configs/eval/pseudo_augmentation/gt_confidence/pseudo_augment_gtc_k_5.yml
+++ b/configs/eval/pseudo_augmentation/gt_confidence/pseudo_augment_gtc_k_5.yml
@@ -3,21 +3,21 @@ dataset:
         n_ways:
             value: 5
         k_shots: 
-            value: 11 # 10 samples are used for pseudo confidence estimation
+            value: 15 # 10 samples are used for pseudo augmentation
         query_size: 20
 
 evaluation:
-    tasks_per_dataset: 50
+    tasks_per_dataset: 200
     confidence_estimators:
-        use: "PseudoConfidenceEstimator"
-        PseudoConfidenceEstimator: {} 
+        use: "GTConfidenceEstimator"
+        GTConfidenceEstimator: {} 
 
     augmentors:
-        use: StandardAugmentation
-        StandardAugmentation:
+        use: PseudoAugmentation
+        PseudoAugmentation:
             keep_original_data: True
             augmentation_size: 
                 scale: 1
-                offset: 3
+                offset: 3 
                 maximum: 20
                 threshold: 0.8
