--- a/configs/eval/pseudo_augmentation/pseudo_confidence/pseudo_augment_pc_k_5.yml
+++ b/configs/eval/pseudo_augmentation/pseudo_confidence/pseudo_augment_pc_k_5.yml
@@ -3,8 +3,8 @@ dataset:
         n_ways:
             value: 5
         k_shots: 
-            value: 11 # 10 samples are used for pseudo confidence estimation
-        query_size: 20
+            value: 25 # 20 samples are used for pseudo confidence estimation and pseudo augmentation
+        query_size: 10
 
 evaluation:
     tasks_per_dataset: 50
@@ -13,11 +13,11 @@ evaluation:
         PseudoConfidenceEstimator: {} 
 
     augmentors:
-        use: StandardAugmentation
-        StandardAugmentation:
+        use: PseudoAugmentation
+        PseudoAugmentation:
             keep_original_data: True
             augmentation_size: 
                 scale: 1
-                offset: 3
+                offset: 3 
                 maximum: 20
                 threshold: 0.8
